--- a/serenity.properties
+++ b/serenity.properties
@@ -1,2 +1,3 @@
 serenity.report.encoding = UTF-8
 webdriver.base.url = https://frontend-innosistemas-sprint2.vercel.app/auth/login
+serenity.take.screenshots = FOR_EACH_ACTION
